@@ -77,12 +77,11 @@ import javax.tools.StandardJavaFileManager;
 import javax.tools.StandardJavaFileManager.PathFactory;
 import javax.tools.StandardLocation;
 
-import com.sun.tools.javac.code.Lint;
-import com.sun.tools.javac.resources.CompilerProperties.LintWarnings;
 import jdk.internal.jmod.JmodFile;
 
 import com.sun.tools.javac.main.Option;
 import com.sun.tools.javac.resources.CompilerProperties.Errors;
+import com.sun.tools.javac.resources.CompilerProperties.LintWarnings;
 import com.sun.tools.javac.util.DefinedBy;
 import com.sun.tools.javac.util.DefinedBy.Api;
 import com.sun.tools.javac.util.ListBuffer;
@@ -123,11 +122,6 @@ public class Locations {
      */
     private FSInfo fsInfo;
 
-    /**
-     * The root {@link Lint} instance.
-     */
-    private Lint lint;
-
     private ModuleNameReader moduleNameReader;
 
     private PathFactory pathFactory = Paths::get;
@@ -136,8 +130,10 @@ public class Locations {
     static final Path thisSystemModules = javaHome.resolve("lib").resolve("modules");
 
     Map<Path, FileSystem> fileSystems = new LinkedHashMap<>();
-    List<Closeable> closeables = new ArrayList<>();
+    // List of resources to be closed (self-sychronized).
+    private final List<Closeable> closeables = new ArrayList<>();
     private String releaseVersion = null;
+    private boolean previewMode = false;
 
     Locations() {
         initHandlers();
@@ -151,15 +147,26 @@ public class Locations {
         }
     }
 
+    private void addCloseable(Closeable c) {
+        synchronized (closeables) {
+            closeables.add(c);
+        }
+    }
+
     public void close() throws IOException {
         ListBuffer<IOException> list = new ListBuffer<>();
-        closeables.forEach(closeable -> {
+        Closeable[] arr;
+        synchronized (closeables) {
+            arr = closeables.toArray(Closeable[]::new);
+            closeables.clear();
+        }
+        for (Closeable closeable : arr) {
             try {
                 closeable.close();
             } catch (IOException ex) {
                 list.add(ex);
             }
-        });
+        }
         if (list.nonEmpty()) {
             IOException ex = new IOException();
             for (IOException e: list)
@@ -168,9 +175,8 @@ public class Locations {
         }
     }
 
-    void update(Log log, Lint lint, FSInfo fsInfo) {
+    void update(Log log, FSInfo fsInfo) {
         this.log = log;
-        this.lint = lint;
         this.fsInfo = fsInfo;
     }
 
@@ -221,7 +227,7 @@ public class Locations {
                 try {
                     entries.add(getPath(s));
                 } catch (IllegalArgumentException e) {
-                    lint.logIfEnabled(LintWarnings.InvalidPath(s));
+                    log.warning(LintWarnings.InvalidPath(s));
                 }
             }
         }
@@ -231,6 +237,11 @@ public class Locations {
     public void setMultiReleaseValue(String multiReleaseValue) {
         // Null is implicitly allowed and unsets the value.
         this.releaseVersion = multiReleaseValue;
+    }
+
+    public void setPreviewMode(boolean previewMode) {
+        // Null is implicitly allowed and unsets the value.
+        this.previewMode = previewMode;
     }
 
     private boolean contains(Collection<Path> searchPath, Path file) throws IOException {
@@ -316,7 +327,7 @@ public class Locations {
         private void addDirectory(Path dir, boolean warn) {
             if (!Files.isDirectory(dir)) {
                 if (warn) {
-                    lint.logIfEnabled(LintWarnings.DirPathElementNotFound(dir));
+                    log.warning(LintWarnings.DirPathElementNotFound(dir));
                 }
                 return;
             }
@@ -361,7 +372,7 @@ public class Locations {
             if (!fsInfo.exists(file)) {
                 /* No such file or directory exists */
                 if (warn) {
-                    lint.logIfEnabled(LintWarnings.PathElementNotFound(file));
+                    log.warning(LintWarnings.PathElementNotFound(file));
                 }
                 super.add(file);
                 return;
@@ -383,12 +394,12 @@ public class Locations {
                         try {
                             FileSystems.newFileSystem(file, (ClassLoader)null).close();
                             if (warn) {
-                                lint.logIfEnabled(LintWarnings.UnexpectedArchiveFile(file));
+                                log.warning(LintWarnings.UnexpectedArchiveFile(file));
                             }
                         } catch (IOException | ProviderNotFoundException e) {
                             // FIXME: include e.getLocalizedMessage in warning
                             if (warn) {
-                                lint.logIfEnabled(LintWarnings.InvalidArchiveFile(file));
+                                log.warning(LintWarnings.InvalidArchiveFile(file));
                             }
                             return;
                         }
@@ -1466,7 +1477,7 @@ public class Locations {
                                 String moduleName = readModuleName(moduleInfoClass);
                                 Path modulePath = fs.getPath("classes");
                                 fileSystems.put(p, fs);
-                                closeables.add(fs);
+                                addCloseable(fs);
                                 fs = null; // prevent fs being closed in the finally clause
                                 return new Pair<>(moduleName, modulePath);
                             } finally {
@@ -1651,7 +1662,7 @@ public class Locations {
 
         void add(Map<String, List<Path>> map, Path prefix, Path suffix) {
             if (!Files.isDirectory(prefix)) {
-                lint.logIfEnabled(Files.exists(prefix) ?
+                log.warning(Files.exists(prefix) ?
                     LintWarnings.DirPathElementNotDirectory(prefix) :
                     LintWarnings.DirPathElementNotFound(prefix));
                 return;
@@ -1957,11 +1968,14 @@ public class Locations {
                     FileSystem jrtfs;
 
                     if (isCurrentPlatform(systemJavaHome)) {
-                        jrtfs = FileSystems.getFileSystem(jrtURI);
+                        JRTIndex jrtIndex = JRTIndex.instance(previewMode);
+                        addCloseable(jrtIndex);
+                        jrtfs = jrtIndex.getFileSystem();
                     } else {
                         try {
                             Map<String, String> attrMap =
-                                    Collections.singletonMap("java.home", systemJavaHome.toString());
+                                    Map.of("java.home", systemJavaHome.toString(),
+                                            "previewMode", String.valueOf(previewMode));
                             jrtfs = FileSystems.newFileSystem(jrtURI, attrMap);
                         } catch (ProviderNotFoundException ex) {
                             URL jfsJar = resolveInJavaHomeLib(systemJavaHome, "jrt-fs.jar").toUri().toURL();
@@ -1971,10 +1985,10 @@ public class Locations {
 
                             jrtfs = FileSystems.newFileSystem(jrtURI, Collections.emptyMap(), fsLoader);
 
-                            closeables.add(fsLoader);
+                            addCloseable(fsLoader);
                         }
 
-                        closeables.add(jrtfs);
+                        addCloseable(jrtfs);
                     }
 
                     modules = jrtfs.getPath("/modules");
