@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, 2026, Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 2024, Red Hat, Inc. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
@@ -55,6 +55,7 @@
  * @requires vm.cds.default.archive.available
  * @requires vm.cds.write.archived.java.heap
  * @requires vm.bits == 64
+ * @requires vm.gc != "Z"
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  *          java.management
@@ -68,6 +69,7 @@
  * @requires vm.cds.default.archive.available
  * @requires vm.cds.write.archived.java.heap
  * @requires vm.bits == 64
+ * @requires vm.gc != "Z"
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  *          java.management
@@ -85,8 +87,10 @@ import jtreg.SkippedException;
 
 public class TestDefaultArchiveLoading {
 
+    static String archivePreviewSuffix = "";
+
     private static String archiveName(String archiveSuffix) {
-        return "classes" + archiveSuffix + ".jsa";
+        return "classes" + archiveSuffix + archivePreviewSuffix + ".jsa";
     }
 
     private static Path archivePath(String archiveSuffix) {
@@ -94,8 +98,8 @@ public class TestDefaultArchiveLoading {
                          "server", archiveName(archiveSuffix));
     }
 
-    private static boolean isCOHArchiveAvailable(char coops, char coh,
-                                                 String archiveSuffix) throws Exception {
+    private static boolean isArchiveAvailable(char coops, char coh,
+                                              String archiveSuffix) throws Exception {
         Path archive= archivePath(archiveSuffix);
         return Files.exists(archive);
     }
@@ -108,17 +112,25 @@ public class TestDefaultArchiveLoading {
 
         String archiveSuffix;
         char coh, coops;
+        String preview = System.getProperty("test.java.opts", "");
+        if (preview.contains("--enable-preview")) {
+            archivePreviewSuffix = "_preview";
+        }
 
         switch (args[0]) {
             case "nocoops_nocoh":
                 coh = coops = '-';
                 archiveSuffix = "_nocoops";
+                if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
+                    throw new SkippedException("Skipping test due to " +
+                                               archivePath(archiveSuffix).toString() + " not available");
+                }
                 break;
             case "nocoops_coh":
                 coops = '-';
                 coh = '+';
                 archiveSuffix = "_nocoops_coh";
-                if (!isCOHArchiveAvailable(coops, coh, archiveSuffix)) {
+                if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
                     throw new SkippedException("Skipping test due to " +
                                                archivePath(archiveSuffix).toString() + " not available");
                 }
@@ -127,11 +139,15 @@ public class TestDefaultArchiveLoading {
                 coops = '+';
                 coh = '-';
                 archiveSuffix = "";
+                if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
+                    throw new SkippedException("Skipping test due to " +
+                                               archivePath(archiveSuffix).toString() + " not available");
+                }
                 break;
             case "coops_coh":
                 coh = coops = '+';
                 archiveSuffix = "_coh";
-                if (!isCOHArchiveAvailable(coops, coh, archiveSuffix)) {
+                if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
                     throw new SkippedException("Skipping test due to " +
                                                archivePath(archiveSuffix).toString() + " not available");
                 }
